--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/sameerdewan/poetry-payments#readme",
   "dependencies": {
-    "stripe": "^8.138.0",
+    "axios": "^0.21.1",
     "express": "4.17.1",
     "express-openapi-validator": "4.12.4",
     "mongoose": "5.11.15",
-    "mongoose-type-email": "1.1.2"
+    "mongoose-type-email": "1.1.2",
+    "stripe": "^8.138.0",
+    "web3": "^1.3.4"
   }
 }
