--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./api/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "axios": "^0.21.1",
     "express": "4.17.1",
     "express-openapi-validator": "4.12.4",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "5.11.15",
     "mongoose-type-email": "1.1.2",
     "stripe": "^8.138.0",
