--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "mongoose": "5.11.15",
     "mongoose-type-email": "1.1.2",
     "stripe": "^8.138.0",
-    "web3": "^1.3.4"
+    "web3": "1.3.4"
   }
 }
